sample-chatbot/deploy/chat-istio-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-ingressgateway-chat
  namespace: istio-system
  labels:
    istio: ingressgateway-chat
spec:
  replicas: 1
  selector:
    matchLabels:
      istio: ingressgateway-chat
  template:
    metadata:
      labels:
        istio: ingressgateway-chat
    spec:
      containers:
      - name: istio-proxy
        image: istio/proxyv2:1.18.0
        ports:
        - containerPort: 80
        - containerPort: 443
        args:
        - proxy
        - router
        - --domain
        - $(POD_NAMESPACE).svc.cluster.local
        - --proxyLogLevel=debug
        - --proxyComponentLogLevel=misc:error
        - --log_output_level=default:info
        - --controlPlaneAuthPolicy=MUTUAL_TLS
        - --trust-domain=istio-system
        - --envoy-access-log-service=accesslog-service.istio-system:9000
        volumeMounts:
        - name: istio-ca-secret
          mountPath: /var/run/secrets/istio  # Mount the secret to this path
          readOnly: true
        - name: istio-token
          mountPath: /var/run/secrets/tokens
          readOnly: true
      volumes:
      - name: istio-ca-secret
        secret:
          secretName: istio-ca-secret  # Secret that contains the root-cert.pem
      - name: istio-token
        projected:
          sources:
            - serviceAccountToken:
                path: istio-token
