sample-chatbot/deploy/chat-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: st-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway-chat
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - chat.tmelab.net  # Change to your domain or use "*"
